--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
     "ntwitter": "*",
     "express.io": "*",
     "dirty": "~0.9.7"
+  },
+  "engines": {
+    "node": ">=0.8.0",
+    "npm": "1.3.x"
   }
 }
